--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -1,11 +1,18 @@
+name: Deploy to GitHub Pages
+
+on:
+  push:
+    branches:
+      - main  # Change to your main branch name if it's different
+  workflow_dispatch:  # This allows you to manually trigger the workflow
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      # Checkout the commit that has been pushed.
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # Setup Hugo, update modules, etc.
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
@@ -28,14 +35,9 @@ jobs:
       - name: Build
         run: hugo --minify
 
-      # Debugging steps
-      - name: Check Git Status
-        run: git status
-
       - name: List Public Directory
         run: ls -al ./public
 
-      # Push the generated content into the `gh-pages` branch.
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
