Changed deploy site file

--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -1,46 +1,49 @@
-name: Deploy to GitHub Pages
+name: Deploy to Github Pages
 
 on:
   push:
     branches:
-      - main  # Change to your main branch name if it's different
-  workflow_dispatch:  # This allows you to manually trigger the workflow
+    - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
-        with:
-          hugo-version: '0.135.0'
-          extended: true
+    - name: Setup Hugo
+      uses: peaceiris/actions-hugo@v3
+      with:
+        hugo-version: 'latest'
+        extended: true
 
-      - name: Update Hugo Modules
-        run: hugo mod tidy
+    - name: Update Hugo Modules
+      run: hugo mod tidy
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+    - name: Setup Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
 
-      - name: Install Node Modules
-        run: |
-          hugo mod npm pack
-          npm install
+    - name: Install node modules
+      run: |
+        hugo mod npm pack
+        npm install        
 
-      - name: Build
-        run: hugo --minify
+    - name: Build
+      run: hugo --minify
 
-      - name: List Public Directory
-        run: ls -al ./public
+    - name: List contents of public directory (debug step)
+      run: ls -al ./public
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: ./public
+    - name: Configure Git
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v4
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
+        publish_dir: ./public
