--- a/hugo.yaml
+++ b/hugo.yaml
@@ -20,13 +20,13 @@ module:
 
 # Manage languages
 # For any more details, you can check the official documentation: https://gohugo.io/content-management/multilingual/
-languages:
-  en:
-    languageName: English
-    weight: 1
-  fr:
-    languageName: Français
-    weight: 2
+# languages:
+#   en:
+#     languageName: English
+#     weight: 1
+#   fr:
+#     languageName: Français
+#     weight: 2
 
 # Force a locale to be use, really useful to develop the application ! Should be commented in production, the "weight" should rocks.
 # DefaultContentLanguage: bn
@@ -73,6 +73,14 @@ params:
     toc:
       enable: true
 
+    darkMode:
+      enable: true
+
   # Configure footer
   footer:
     enable: true
+
+    # Show/hide newsletter section in the footer. Default is "true".
+    # Currently, it supports "mailchimp".
+    newsletter:
+      enable: false
