--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -13,8 +13,7 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - I am a Developer
   - I am a Researcher
+  - I am a Developer
+  - I work on Deep Learning Projects
   - I am a Trail Runner
-  - I work on GNN projects
-  - I love to work with some fun projects
