--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -1,4 +1,4 @@
-name: Merge to main workflows
+name: Deploy to Github Pages
 
 # run when a commit is pushed to "source" branch
 on:
@@ -7,14 +7,14 @@ on:
     - main
 
 jobs:
-  deploy-to-gh-pages:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     # checkout to the commit that has been pushed
     - uses: actions/checkout@v4
 
     - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v3.0.0
+      uses: peaceiris/actions-hugo@v3
       with:
         hugo-version: 'latest'
         extended: true
@@ -25,19 +25,19 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: 20
 
     - name: Install node modules
       run: |
         hugo mod npm pack
-        npm install
+        npm install        
 
     - name: Build
       run: hugo --minify
 
     # push the generated content into the `gh-pages` branch.
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v4.0.0
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
