Changed website title

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseURL: https://uniquekarki.github.io
 
 languageCode: en-us
-title: "Unique's Blog"
+title: "Unique Karki"
 
 # Use Hugo modules to add theme
 
