--- a/.github/workflows/deploy-site.yaml
+++ b/.github/workflows/deploy-site.yaml
@@ -1,6 +1,6 @@
 name: Deploy to Github Pages
 
-# run when a commit is pushed to "source" branch.
+# run when a commit is pushed to "source" branch
 on:
   push:
     branches:
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    # checkout to the commit that has been pushed.
+    # checkout to the commit that has been pushed
     - uses: actions/checkout@v4
 
     - name: Setup Hugo
