Added new pages

--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -1,11 +1,11 @@
 customMenus:
 - name: My Story
-  url: /posts
+  url: /posts/my-story
   hideFromNavbar: false
   showOnFooter: true
 
 - name: Reading List
-  url: /posts
+  url: /posts/reads
   hideFromNavbar: false
   showOnFooter: true
 
