Updated teaching experience

--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -39,7 +39,7 @@ experiences:
     start: Apr 2022
     end: Present
     responsibilities:
-    - <b>Subjects taught</b> - Data Structures And Algorithms (CACS201), Operating System (CACS251), Software Engineering (CACS253).
+    - <b>Subjects taught</b> - Artificial Intelligence (CACS410).
     - <b>Student Guidance</b> - Supervised and guided undergraduate research projects, fostering academic growth and innovation.
     - <b>Event Organization</b> - Organized seminars, workshops, and conferences to enhance the academic experience and promote knowledge sharing.
 
