--- a/data/en/sections/research.yaml
+++ b/data/en/sections/research.yaml
@@ -33,7 +33,12 @@ experiences:
     url: "https://ku.edu.np/"
     location: Dhulikhel, Nepal
     logo: /images/sections/education/ku.png
-    overview: Conferences <br/> <a href="files/slide_ann_ga.pdf" target="_blank">National Conference On Mathematics And Its Application - NCMA 2022</a> </br> <a href="files/Final_ICMA_2024.pdf" target="_blank">International Conference On Mathematics And Application - ICMA 2024</a> </br> <br/> Research Paper <br/> <a href="files/Research_paper.pdf" target="_blank">Artificial Neural Network-Genetic and PSO Algorithm for Optimization of Multivariate Function - An Application to Lactic Acid Production</a>
+    overview: |
+      Conferences <br>
+      <a href="files/slide_ann_ga.pdf" target="_blank">National Conference On Mathematics And Its Application - NCMA 2022</a> <br>
+      <a href="files/Final_ICMA_2024.pdf" target="_blank">International Conference On Mathematics And Application - ICMA 2024</a> <br> <br>
+      Research Paper <br>
+      <a href="files/Research_paper.pdf" target="_blank">Artificial Neural Network-Genetic and PSO Algorithm for Optimization of Multivariate Function - An Application to Lactic Acid Production</a>
     # Can optionally show a different logo for dark theme
     # darkLogo: /images/sections/experiences/company2.jpg
   positions:
