Added teaching experience

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -12,7 +12,7 @@ section:
 resume: "files/CV_Unique_Karki.pdf"
 
 # a summary about you
-summary: "I graduated from Kathmandu University with a B.Sc. in Computer Science in 2022. I am currently working as a remote research intern with Prof. Yushun Dong at Florida State University. With a total of two years of experience as a Machine Learning Engineer, Data Engineering Intern, and Software Engineer, I am passionate about leveraging technology to solve real-world problems. My focus lies in machine learning and deep learning, particularly with graph data and Graph Neural Networks (GNNs).<br/><br/>Outside of work, I’m an avid trail runner, having completed multiple races totaling 100 miles around the beautiful Kathmandu Valley."
+summary: "I graduated from Kathmandu University with a B.Sc. in Computer Science in 2022. I am currently working as a remote research intern with Prof. Yushun Dong at Florida State University and a teaching faculty at V.S. International College. With over two years of experience as a Machine Learning Engineer, Data Engineering Intern, Software Engineer, and Course Instructor, I am passionate about leveraging technology to solve real-world problems. My focus lies in machine learning and deep learning, particularly with graph data and Graph Neural Networks (GNNs).<br/><br/>Outside of work, I’m an avid trail runner, having completed multiple races totaling 100 miles around the beautiful Kathmandu Valley."
 
 # your social links
 # give as many as you want. use font-awesome for the icons.
